--- a/config.json
+++ b/config.json
@@ -2,12 +2,13 @@
   "input": "./gallery",
   "output": "./build_output",
   "title": "Photo Gallery",
+  "albums-output-folder": "gallery",
   "sort-albums-by": "title",
   "sort-media-by": "filename",
   "download-photos": "copy",
   "cleanup": true,
   "theme": "cards",
   "css": "./custom.css",
-  "footer": "Copyright Text",
+  "footer": "Copyright © 2025 Friends of Streatham Common",
   "usage-stats": false
 }
