--- a/.github/workflows/gallery.yml
+++ b/.github/workflows/gallery.yml
@@ -2,10 +2,10 @@ name: Publish Gallery
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
   workflow_dispatch:
 permissions:
   id-token: write
