--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
   "title": "Photo Gallery",
   "albums-output-folder": "gallery",
   "sort-albums-by": "title",
-  "sort-media-by": "filename",
+  "sort-media-by": "date",
+  "sort-media-direction": "desc",
   "download-photos": "copy",
   "cleanup": true,
   "theme": "cards",
