--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "input": "./gallery",
   "output": "./build_output",
-  "title": "Photo Gallery",
+  "title": "Photos from Streatham Common Kitedays",
   "albums-output-folder": "gallery",
   "sort-albums-by": "title",
   "sort-media-by": "date",
@@ -11,5 +11,6 @@
   "theme": "cards",
   "css": "./custom.css",
   "footer": "Copyright © 2025 Friends of Streatham Common",
-  "usage-stats": false
+  "usage-stats": false,
+  "index": "gallery.html"
 }
