--- a/config.json
+++ b/config.json
@@ -3,7 +3,8 @@
   "output": "./build_output",
   "title": "Photos from Streatham Common Kitedays",
   "albums-output-folder": "gallery",
-  "sort-albums-by": "title",
+  "sort-albums-by": "start-date",
+  "sort-albums-direction": "desc",
   "sort-media-by": "date",
   "sort-media-direction": "desc",
   "download-photos": "copy",
